@@ -1,0 +1,37 @@
+﻿using osu.Framework.Bindables;
+using osu.Framework.Graphics;
+using osu.Framework.Graphics.Sprites;
+using osu.XR.Components.Groups;
+using osu.XR.Drawables;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace osu.XR.Components.Panels {
+	public class XrChangelogPanel : FlatPanel, IHasName, IHasIcon {
+		public readonly ChangelogPanel Panel = new() { Height = 500, Width = 400 };
+		public readonly Bindable<bool> IsVisibleBindable = new();
+
+		public XrChangelogPanel () {
+			PanelAutoScaleAxes = Axes.X;
+			PanelHeight = 0.5;
+			RelativeSizeAxes = Axes.X;
+			Height = 500;
+			AutosizeX();
+			Source.Add( Panel );
+		}
+
+		protected override void Update () {
+			base.Update();
+			IsVisible = Panel.IsPresent;
+			IsVisibleBindable.Value = IsVisible;
+		}
+
+		public string DisplayName => "Changelog";
+
+		public Drawable CreateIcon ()
+			=> new SpriteIcon { Icon = FontAwesome.Solid.ClipboardList };
+	}
+}
