@@ -2,12 +2,18 @@
 Implemented saving and loading ruleset bindings.
 Ruleset bindings now support rulesets with variants like osu!mania.
 The inspector selection box now correctly selects objects with an offset.
-When you hover over a button in the inspector hiererchy, a seconday yellow selection box shows that object.
+There is also a secondary selection box for previewed elements.
+You can now inspect 2D drawables.
 Improved transparency rendering. The keyboard will no longer have jank visuals when pressing a key and the pointers will not make panels see-through.
 Fixed collisions not working on flat Y-planes. There is a floor collider now!
 The default preset has a better screen size now.
 Improved physics performance.
-
+The inspector panel got a fleshed out look and functionality:
+* A new hierarchy inspector
+* A new reflections inspector
+* Custom sections for elements with settings
+Added this changelog!
+The keyboard now flashes the pressed key.
 
 [2021.05.19]
 When in 2 pointer mode and one hand is occupied (for example, holding a menu), the other pointer will act as if it was in 1 pointer mode.
